--- a/app/src/main/res/layout/teleop_screen.xml
+++ b/app/src/main/res/layout/teleop_screen.xml
@@ -22,6 +22,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="#E67373"
+        android:onClick="coneTopPlus"
         android:text="Top"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,6 +37,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="#E67373"
+        android:onClick="cubeTopPlus"
         android:text="Top"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,6 +52,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="#E67373"
+        android:onClick="coneMidPlus"
         android:text="Middle"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -64,6 +67,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="#E67373"
+        android:onClick="cubeMidPlus"
         android:text="Middle"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,6 +82,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="#E67373"
+        android:onClick="coneLowPlus"
         android:text="Bottom"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -92,6 +97,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="#E67373"
+        android:onClick="cubeLowPlus"
         android:text="Bottom"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
