--- a/app/src/main/res/layout/auto_screen.xml
+++ b/app/src/main/res/layout/auto_screen.xml
@@ -22,7 +22,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="@color/melloyellow"
-        android:onClick="coneTopPlus"
+        android:onClick="coneTop"
         android:text="Top"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="@color/melloyellow"
-        android:onClick="cubeTopPlus"
+        android:onClick="cubeTop"
         android:text="Top"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,7 +52,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="@color/melloyellow"
-        android:onClick="coneMidPlus"
+        android:onClick="coneMid"
         android:text="Middle"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -67,7 +67,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="@color/melloyellow"
-        android:onClick="cubeMidPlus"
+        android:onClick="cubeMid"
         android:text="Middle"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,7 +82,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="@color/melloyellow"
-        android:onClick="coneLowPlus"
+        android:onClick="coneBot"
         android:text="Bottom"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -97,7 +97,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="@color/melloyellow"
-        android:onClick="cubeLowPlus"
+        android:onClick="cubeBot"
         android:text="Bottom"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -107,35 +107,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.694" />
 
-    <ImageView
-        android:id="@+id/cubeImage"
-        android:layout_width="105dp"
-        android:layout_height="140dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.923"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.959"
-        app:srcCompat="@drawable/cube2" />
-
-    <ImageView
-        android:id="@+id/triangleImage"
-        android:layout_width="151dp"
-        android:layout_height="178dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/triangle" />
-
     <Button
         android:id="@+id/parkButton"
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="@color/undoColor"
+        android:onClick="parked"
         android:text="Parked"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -145,10 +122,25 @@
         app:layout_constraintVertical_bias="0.291" />
 
     <Button
+        android:id="@+id/noneButton"
+        android:layout_width="152dp"
+        android:layout_height="77dp"
+        android:backgroundTint="@color/undoColor"
+        android:onClick="resetChargeStation"
+        android:text="None"
+        android:textSize="22dp"
+        app:layout_constraintBottom_toTopOf="@+id/parkButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.796" />
+
+    <Button
         android:id="@+id/dockedButton"
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="@color/undoColor"
+        android:onClick="docked"
         android:text="Docked"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -161,6 +153,7 @@
         android:layout_width="152dp"
         android:layout_height="77dp"
         android:backgroundTint="@color/undoColor"
+        android:onClick="dockedAndEngaged"
         android:text="Docked + Engaged"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -168,6 +161,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.709" />
+
+    <Button
+        android:id="@+id/teleOpButton"
+        android:layout_width="152dp"
+        android:layout_height="77dp"
+        android:backgroundTint="@color/purple_500"
+        android:onClick="startTele"
+        android:text="teleOp"
+        android:textSize="22dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.917" />
 
     <TextView
         android:id="@+id/coneTopText"
@@ -177,8 +184,8 @@
         android:textSize="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.215"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintStart_toEndOf="@+id/ConeTopButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.162" />
 
@@ -190,10 +197,10 @@
         android:textSize="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.215"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.031"
+        app:layout_constraintStart_toEndOf="@+id/coneMidButton"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.403" />
+        app:layout_constraintVertical_bias="0.402" />
 
     <TextView
         android:id="@+id/cubeMidText"
@@ -202,11 +209,11 @@
         android:text="0"
         android:textSize="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.81"
+        app:layout_constraintEnd_toStartOf="@+id/cubeMidButton"
+        app:layout_constraintHorizontal_bias="0.983"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.403" />
+        app:layout_constraintVertical_bias="0.402" />
 
     <TextView
         android:id="@+id/cubeTopText"
@@ -215,8 +222,8 @@
         android:text="0"
         android:textSize="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.81"
+        app:layout_constraintEnd_toStartOf="@+id/cubeTopButton"
+        app:layout_constraintHorizontal_bias="0.983"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.162" />
@@ -229,8 +236,8 @@
         android:textSize="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.215"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.031"
+        app:layout_constraintStart_toEndOf="@+id/coneBottomButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.657" />
 
@@ -241,17 +248,18 @@
         android:text="0"
         android:textSize="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.81"
+        app:layout_constraintEnd_toStartOf="@+id/cubeBottomButton"
+        app:layout_constraintHorizontal_bias="0.983"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.656" />
+        app:layout_constraintVertical_bias="0.657" />
 
     <Button
         android:id="@+id/coneTopUndo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/bgpink"
+        android:onClick="coneTopUndo"
         android:text="Undo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -265,6 +273,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/bgpink"
+        android:onClick="coneMidUndo"
         android:text="Undo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -278,6 +287,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/bgpink"
+        android:onClick="coneBotUndo"
         android:text="Undo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -290,12 +300,14 @@
         android:id="@+id/cubeBotUndo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="136dp"
         android:backgroundTint="@color/bgpink"
+        android:onClick="cubeBotUndo"
         android:text="Undo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.886"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/cubeBottomButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.776" />
 
@@ -303,25 +315,59 @@
         android:id="@+id/cubeMidUndo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="136dp"
         android:backgroundTint="@color/bgpink"
+        android:onClick="cubeMidUndo"
         android:text="Undo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.886"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/cubeMidButton"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.511" />
+        app:layout_constraintVertical_bias="0.519" />
 
     <Button
         android:id="@+id/cubeTopUndo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/bgpink"
+        android:onClick="cubeTopUndo"
         android:text="Undo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.886"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/cubeTopButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.267" />
+
+    <TextView
+        android:id="@+id/coneText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/greyHex"
+        android:text="CONES"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/coneBottomButton"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.921" />
+
+    <TextView
+        android:id="@+id/cubeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/greyHex"
+        android:text="CUBES"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/cubeBottomButton"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.921" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
