--- a/app/src/main/res/layout/auto_screen.xml
+++ b/app/src/main/res/layout/auto_screen.xml
@@ -108,32 +108,33 @@
         app:layout_constraintVertical_bias="0.694" />
 
     <Button
-        android:id="@+id/parkButton"
-        android:layout_width="152dp"
-        android:layout_height="77dp"
+        android:id="@+id/leftCommunityButton"
+        android:layout_width="161dp"
+        android:layout_height="97dp"
         android:backgroundTint="@color/undoColor"
-        android:onClick="parked"
-        android:text="Parked"
+        android:onClick="leftCommunity"
+        android:text="Left Community"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.291" />
+        app:layout_constraintVertical_bias="0.091" />
 
     <Button
         android:id="@+id/noneButton"
         android:layout_width="152dp"
         android:layout_height="77dp"
+        android:layout_marginTop="228dp"
         android:backgroundTint="@color/undoColor"
         android:onClick="resetChargeStation"
         android:text="None"
         android:textSize="22dp"
-        app:layout_constraintBottom_toTopOf="@+id/parkButton"
+        app:layout_constraintBottom_toTopOf="@+id/dockedButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.796" />
+        app:layout_constraintVertical_bias="0.035" />
 
     <Button
         android:id="@+id/dockedButton"
@@ -369,5 +370,18 @@
         app:layout_constraintStart_toStartOf="@+id/cubeBottomButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.921" />
+
+    <Button
+        android:id="@+id/undoCommunity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/bgpink"
+        android:text="Undo"
+        app:layout_constraintBottom_toTopOf="@+id/noneButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/leftCommunityButton"
+        app:layout_constraintTop_toBottomOf="@+id/leftCommunityButton"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
