--- a/app/src/main/res/layout/auto_screen.xml
+++ b/app/src/main/res/layout/auto_screen.xml
@@ -8,13 +8,6 @@
     android:backgroundTint="#5C5252"
 
 
-
-
-
-
-
-
-
     >
 
     <Button
@@ -109,23 +102,22 @@
 
     <Button
         android:id="@+id/leftCommunityButton"
-        android:layout_width="161dp"
-        android:layout_height="97dp"
+        android:layout_width="152dp"
+        android:layout_height="77dp"
         android:backgroundTint="@color/undoColor"
         android:onClick="leftCommunity"
         android:text="Left Community"
-        android:textSize="22dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="17dp"
+        app:layout_constraintBottom_toTopOf="@+id/noneButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.091" />
+        app:layout_constraintVertical_bias="0.938" />
 
     <Button
         android:id="@+id/noneButton"
         android:layout_width="152dp"
         android:layout_height="77dp"
-        android:layout_marginTop="228dp"
         android:backgroundTint="@color/undoColor"
         android:onClick="resetChargeStation"
         android:text="None"
@@ -134,7 +126,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.035" />
+        app:layout_constraintVertical_bias="0.955" />
 
     <Button
         android:id="@+id/dockedButton"
@@ -144,10 +136,11 @@
         android:onClick="docked"
         android:text="Docked"
         android:textSize="22dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/dockedandEbutton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.956" />
 
     <Button
         android:id="@+id/dockedandEbutton"
@@ -157,11 +150,11 @@
         android:onClick="dockedAndEngaged"
         android:text="Docked + Engaged"
         android:textSize="22dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/teleOpButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.709" />
+        app:layout_constraintVertical_bias="0.964" />
 
     <Button
         android:id="@+id/teleOpButton"
@@ -175,7 +168,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.917" />
+        app:layout_constraintVertical_bias="0.968" />
 
     <TextView
         android:id="@+id/coneTopText"
@@ -371,17 +364,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.921" />
 
-    <Button
-        android:id="@+id/undoCommunity"
+    <TextView
+        android:id="@+id/autoChargeStationText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/bgpink"
-        android:text="Undo"
-        app:layout_constraintBottom_toTopOf="@+id/noneButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/leftCommunityButton"
-        app:layout_constraintTop_toBottomOf="@+id/leftCommunityButton"
-        app:layout_constraintVertical_bias="0.0" />
+        android:text="Charge Station: None"
+        android:textSize="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/leftCommunityButton"
+        app:layout_constraintEnd_toStartOf="@+id/cubeTopButton"
+        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintStart_toEndOf="@+id/ConeTopButton"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.87" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
